@@ -1,7 +1,8 @@
 2012-02-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
-	* src/z80/ralloc2.cc:
-	  Improve handling hl for pointer setting in register allocator.
+	* src/z80/ralloc2.cc,
+	  src/z80/gen.c:
+	  Improve handling of register pairs, in particular hl.
 
 2012-02-06 Philipp Klaus Krause <pkk AT spth.de>
 
